[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cairosvg>=2.7.1",
    "google-api-python-client>=2.160.0",
    "google-auth>=2.38.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "gspread>=6.1.4",
    "numpy>=2.2.2",
    "oauth2client>=4.1.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.38",
    "streamlit-folium>=0.24.0",
    "streamlit>=1.42.0",
    "toml>=0.10.2",
    "trafilatura>=2.0.0",
    "twilio>=9.4.5",
    "folium>=0.19.4",
    "requests>=2.32.3",
    "python-dateutil>=2.9.0.post0",
    "python-telegram-bot>=22.0",
    "psutil>=7.0.0",
]
